deploy/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: www-public
  annotations:
    cert-manager.io/cluster-issuer: "stefanmuraru-com-issuer"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: stefnamuraru.com
    external-dns.alpha.kubernetes.io/target: d473da53-e5a4-4535-b3f0-6e36d165b874.cfargotunnel.com
spec:
  ingressClassName: public
  tls:
    - hosts:
        - stefanmuraru.com
        - "*.stefanmuraru.com"
      secretName: star-stefanmuraru-com-tls
  rules:
    - host: stefanmuraru.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: www
                port:
                  number: 80
